# BigEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  run.py
assets/shaders/: myshader.glsl  shader.frag  shader.vert
include/: core.hpp  util.hpp
src/: CMakeLists.txt  component.hpp  core.cpp  entity.cpp  entity.hpp  main.cpp  scene.cpp  scene.hpp  util.hpp
src/Engine/: app.cpp  app.hpp  entity.cpp  entity.hpp  scene.cpp  scene.hpp  system.hpp  utility.cpp  utility.hpp
src/Render/: device.cpp  device.hpp  info.cpp  info.hpp  render.cpp  render.hpp  system.cpp  system.hpp  window.cpp  window.hpp
test/: CMakeLists.txt  scene_test.cpp
